--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,88 @@
+html {
+    border: 1px solid blue;
+}
 
+
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+li {
+    list-style-type: none;
+    display: inline-block;
+}
+
+a {
+    color: rgb(22, 77, 77);
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+}
+a:hover {
+    border-bottom:3px solid rgb(22, 72, 77);
+}
+
+input {
+    padding: 15px;
+    border-radius: 10px;
+    border: none;
+    background-color: whitesmoke;
+}
+
+button {
+    padding: 15px;
+    border-radius: 15px;
+    background-color: rgb(22, 72, 77);
+    color: white;
+    font-size: 12px;
+    border: none;
+    transition: background-color 0.2s ease-in-out;
+}
+button:hover {
+    background-color: rgb(94, 178, 71);
+}
+
+body {
+    margin: 0;
+    font-family: Helvetica, sans-serif;
+}
+
+header , footer { 
+    min-width: 800px;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+header { 
+    padding-right: 50px;
+}
+
+form {
+    max-width: 300px;
+    display: inline-block;
+}
+
+.footer-container {
+    padding: 20px;
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: space-between;
+}
+
+.options ul {
+    flex-direction: column;
+}
+
+.options {
+    display: flex;
+    flex-direction: row;
+}
+
+.footer-title {
+    color: rgb(22, 72, 77);
+}
+
+main {
+    height: 200px;
+}
